<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".Activity.SignUpActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/ic_wave"
        android:scaleX="-1" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_margin"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:indeterminate="true"
                android:visibility="invisible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/textSignUp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="6dp"
                android:text="@string/textSubTitleSignUp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_user">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/textUsername"
                        android:textSize="16sp"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/textEmail"
                        android:textSize="16sp"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/textPassword"
                        android:textSize="16sp"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="@dimen/button_radius">

                    <Button
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingHorizontal="20dp"
                        android:text="@string/textSignUp"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="35dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/textHaveAccount"
                    android:textSize="13sp" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>