<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="@dimen/card_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/forgot" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Forgot your password?"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/textTitleForgotPass"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/textEmail"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginVertical="15dp"
                    app:cardCornerRadius="@dimen/button_radius"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/btnNegative"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/colorButtonNegative"
                            android:foreground="?attr/selectableItemBackground"
                            android:text="@string/textCancel"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="13sp" />

                        <Button
                            android:id="@+id/btnPositive"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/colorPrimaryDark"
                            android:foreground="?attr/selectableItemBackground"
                            android:text="@string/textSend"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="13sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>