<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context=".Activity.Account.AccountMenu.AccountSettings.SubMenu.DeleteAccountActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ic_warning"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_warning" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ic_warning"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Deleting your account will:"
                android:textColor="@color/colorRed"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="* Delete your account from Sabo Store" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="* Delete your all order" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="* Delete your all favorite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="* Delete all item in cart" />


        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="#1A000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_marginTop="-6dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:text="To delete your account, confirm your email and password."
                    android:textAlignment="center" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_email">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/textEmail"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_password">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/textPassword"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="@color/red_btn_bg_color"
                    app:cardCornerRadius="8dp">

                    <Button
                        android:id="@+id/btnDeleteAccount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingHorizontal="10dp"
                        android:text="@string/textDeleteAccount"
                        android:textColor="@android:color/white" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</LinearLayout>